--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #2554FF !important;
+  background: #ffffff !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
@@ -13,9 +13,14 @@ body,
 html,
 .App,
 .vue-template,
-.vertical-center {
+.vertical-center, 
+.horizontal-center {
   width: 100%;
   height: 100%;
+}
+
+.App {
+  padding-top: 300px; /*offset for navbar*/
 }
 
 .navbar-light {
@@ -27,11 +32,20 @@ html,
   display: flex;
   text-align: left;
   justify-content: center;
-  flex-direction: column;    
+  flex-direction: column; 
 }
 
+/* .horizontal-center {
+  display: flex;
+  text-align: left;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;  
+  align-content: stretch;
+} */
+
 .inner-block {
-  width: 450px;
+  width: 600px;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
