--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -54,6 +54,16 @@ html,
   transition: all .3s;
 }
 
+.block1 {
+  width: 800px;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all .3s;
+}
+
 .vertical-center .form-control:focus {
   border-color: #2554FF;
   box-shadow: none;
