--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -128,3 +128,9 @@ label {
   transition: none;
   color: #222222;
 }
+
+.carousel-caption{
+  transform: translateY(-50%);
+  bottom: initial;
+  top:50%;
+}
