--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -1,50 +1,50 @@
-* {
+ * {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: #ffffff !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
-}
+} */
 
 body,
 html,
-.App,
 .vue-template,
 .vertical-center, 
 .horizontal-center {
   width: 100%;
-  height: 100%;
-}
+  height: 70%;
+} 
+ .main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+} 
 
-.App {
-  padding-top: 75px;
-}
-
-.vertical-center {
-  display: flex;
-  text-align: left;
-  justify-content: flex-start;
-  flex-direction: row;
-  /* flex-wrap: wrap; */
+.pageView{
+  width: 95%;
+  float: left;
 }
 
 .filter {
-  height: 100%;
-  flex: 1 0 70%;
+  display: flex;
+  width:53%;
+  margin: 2%;
+  margin-right: 2%;
+    float: left;
+
 }
 
 .info-side {
-  flex: 0 0 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  width:42%;
+    float: left;
 }
 
-.inner-block {
+
+/* .inner-block {
   width: 600px;
   margin: auto;
   background: #ffffff;
@@ -81,7 +81,8 @@ label {
 
 .forgot-password a {
   color: #2554FF;
-}
+} */
+
 
 
 
